--- a/index.html
+++ b/index.html
@@ -18,7 +18,69 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>questions project</h1>
+    <section class="questions">
+      <!-- title -->
+      <div class="title">
+        <h2>general questions</h2>
+      </div>
+      <!-- questions -->
+      <div class="section-center">
+        <!-- single question -->
+        <article class="question">
+          <!-- question title -->
+          <div class="question-title">
+          <p>Do You Accept All Major Creditcards?</p>
+          <button type="button " class="question-btn">
+            <span class="plus-icon">
+              <i class="far fa-plus-square"></i>
+            </span>
+            <span class="minus-icon">
+              <i class="far fa-minus-square"></i>
+            </span>
+          </button>
+          </div>
+          <!-- question text -->
+          <div class="question-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio quidem tempore libero commodi quis ipsa facere recusandae voluptas perferendis repellat.</div>
+        </article>
+        <!-- end single question -->
+        <!-- single question -->
+        <article class="question">
+          <!-- question title -->
+          <div class="question-title">
+          <p>Do You Support Local Farmers?</p>
+          <button type="button " class="question-btn">
+            <span class="plus-icon">
+              <i class="far fa-plus-square"></i>
+            </span>
+            <span class="minus-icon">
+              <i class="far fa-minus-square"></i>
+            </span>
+          </button>
+          </div>
+          <!-- question text -->
+          <div class="question-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio quidem tempore libero commodi quis ipsa facere recusandae voluptas perferendis repellat.</div>
+        </article>
+        <!-- end single question -->
+        <!-- single question -->
+        <article class="question">
+          <!-- question title -->
+          <div class="question-title">
+          <p>Do You Use Organic Ingredients?</p>
+          <button type="button " class="question-btn">
+            <span class="plus-icon">
+              <i class="far fa-plus-square"></i>
+            </span>
+            <span class="minus-icon">
+              <i class="far fa-minus-square"></i>
+            </span>
+          </button>
+          </div>
+          <!-- question text -->
+          <div class="question-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio quidem tempore libero commodi quis ipsa facere recusandae voluptas perferendis repellat.</div>
+        </article>
+        <!-- end single question -->
+      </div>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
